--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,28 +1,22 @@
 
-<div class="jumbotron">
-  <h1>Sitio en construcción </h1>
-  <h2> DaleMotor</h2>
-  <p>...</p>
-  <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
-</div>
-<h1> Dale Motor</h1>
-<h2> encuentra tu auto usado</h2>
-<a href="http://www.google.com"target="_blank"> Link a google </a>
-<hr>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div class="jumbotron">
+			<%=image_tag "logodalemotorgrande.png"%>
+			<h1>Sitio en construcción </h1>
+			<p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+		</div>
 
-	<img src="http://flickholdr.com/200/300/sea,sun">
-	<img src="http://flickholdr.com/200/300/sea">
+	<h1> Encuentra tu auto usado</h1>
+		<a href="http://www.dalemotor.com"target="_blank"> Link a DaleMotor </a>
+	<hr>
+	<p>Toda la oferta del mundo automotor usados.</p>
 
+		<div class="row">
+	    <div class="col-xs-6 col-sm-3"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTgQfsTH1Ym7tP5fR0oH3aE5TAo6kxLM1WXx9QtdGva4_m9A0vV"><p> Audi A3</p></div>
 
-	<img src="http://t3.gstatic.com/images?q=tbn:ANd9GcSIt-MZ3XwtWEGNXECnN4rxOwMN31THgoEacmGEX_te3ETkAtA6AA">
+	    <div class="col-xs-6 col-sm-3"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTUgDOsbETjvxBr5sVrkV39jt5uf93UMeIO8fOAZPtSMcmfeDY9"> <p> Bmw 116i</p></div>
+	 
+	    <div class="col-xs-6 col-sm-3"><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcT9Lw6lDF8Ad_JDmSH_B8znjwcYV6qyYQI1OY0hyPee5d6nTVn-oA"> <p> A200</p></div>
+	    </div>
 
-<a href="http://www.google.com"> <img src="http://t3.gstatic.com/images?q=tbn:ANd9GcSIt-MZ3XwtWEGNXECnN4rxOwMN31THgoEacmGEX_te3ETkAtA6AA"> </a>
-
-<%=image_tag "109726474.jpg"%>
-
+	
+		<a href="http://www.dalemotor.com"> <img src="http://www.dalemotor.com/wp-content/uploads/2013/10/cropped-FotoHome.jpeg"> </a> 
