styling session#new

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,15 +8,16 @@
 	<h1> Encuentra tu auto usado</h1>
 		<a href="http://www.dalemotor.com"target="_blank"> Link a DaleMotor </a>
 	<hr>
-	<p>Toda la oferta del mundo automotor usados.</p>
+		<div class="container">
+		<p>Toda la oferta del mundo automotor usados.</p>
 
-		<div class="row">
-	    <div class="col-xs-6 col-sm-3"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTgQfsTH1Ym7tP5fR0oH3aE5TAo6kxLM1WXx9QtdGva4_m9A0vV"><p> Audi A3</p></div>
+			<div class="row">
+		    <div class="col-xs-3 col-sm-4"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTgQfsTH1Ym7tP5fR0oH3aE5TAo6kxLM1WXx9QtdGva4_m9A0vV"><p> Audi A3</p></div>
 
-	    <div class="col-xs-6 col-sm-3"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTUgDOsbETjvxBr5sVrkV39jt5uf93UMeIO8fOAZPtSMcmfeDY9"> <p> Bmw 116i</p></div>
-	 
-	    <div class="col-xs-6 col-sm-3"><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcT9Lw6lDF8Ad_JDmSH_B8znjwcYV6qyYQI1OY0hyPee5d6nTVn-oA"> <p> A200</p></div>
-	    </div>
-
+		    <div class="col-xs-3 col-sm-4"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTUgDOsbETjvxBr5sVrkV39jt5uf93UMeIO8fOAZPtSMcmfeDY9"> <p> Bmw 116i</p></div>
+		 
+		    <div class="col-xs-3 col-sm-4"><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcT9Lw6lDF8Ad_JDmSH_B8znjwcYV6qyYQI1OY0hyPee5d6nTVn-oA"> <p> A200</p></div>
+		    </div>
+	
 	
 		<a href="http://www.dalemotor.com"> <img src="http://www.dalemotor.com/wp-content/uploads/2013/10/cropped-FotoHome.jpeg"> </a> 
