--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <div class="well">
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
@@ -12,7 +14,10 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up",:class=>'btn btn-primary' %></div>
+  <br>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
